# jjy-clock

./: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  config.example.yaml  config.schema  pyproject.toml
kubernetes/: jjy-wave.yaml
src/: app.py  healthz.py
src/jjy/: clock.py
tests/: test_basic.py
